# ShopTheLook

./: .gitignore  README.md  anotate_yolo_on_image.py  consumer_to_shop_path_yolo_inference.txt  consumer_to_shop_path_yolo_inference_detected_1_object.txt  consumer_to_shop_path_yolo_inference_detected_2_object.txt  consumer_to_shop_path_yolo_inference_detected_3_object.txt  consumer_to_shop_path_yolo_inference_detected_4_object.txt  consumer_to_shop_path_yolo_inference_detected_7_object.txt  convert_voc_to_dino.py  convert_voc_to_yolo.py  desire_format.md  generate_bbox_high_res_images.py  image_draw.py  no_detections.txt  pyproject.toml  reverse_yolo.py  utils.py  yolo_data_maker.py  yolo_inference.py  yolo_inference_bk.py  yolo_inference_for_Handbags_consumer_to_shop_path.txt  yolo_inference_for_Pants_consumer_to_shop_path.txt  yolo_inference_for_Shirts_consumer_to_shop_path.txt  yolo_inference_for_Shoes_consumer_to_shop_path.txt  yolo_inference_for_Sunglasses_consumer_to_shop_path.txt
